# reservation

./: .env  .pre-commit-config.yaml  .tokeignore  Cargo.toml  README.md
.github/workflows/: build.yml
abi/: Cargo.toml  build.rs
abi/protos/: reservation.proto
abi/src/: config.rs  error.rs  lib.rs  utils.rs
abi/src/error/: conflict.rs  mod.rs
abi/src/pb/: mod.rs  reservation.rs
abi/src/types/: mod.rs  request.rs  reservation.rs  reservation_query.rs  reservation_status.rs
migrations/: 20240110140311_reservation.down.sql  20240110140311_reservation.up.sql  20240110140659_reservation_trigger.down.sql  20240110140659_reservation_trigger.up.sql  20240110141241_reservation_func.up.sql
reservation/: Cargo.toml
reservation/examples/: anyhow.rs  listen.rs  once.rs
reservation/src/: error.rs  lib.rs  manager.rs
rfcs/: 0001-core-reservation.md  template.md
service/: Cargo.toml
service/fixtures/: config.yaml
service/src/: config.rs  lib.rs  main.rs  service.rs  test_util.rs
service/tests/: service.rs
