[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.3"
prost-types = "0.12.3"
tonic = { version = "0.10.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.10.2"
