[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.31", features = ["serde"] }
prost = "0.12.3"
prost-types = "0.12.3"
regex = "1.10.2"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.56"
tonic = { version = "0.10.2", features = ["gzip"] }

[build-dependencies]
tonic-build = "0.10.2"
