[package]
name = "reservation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.79"
async-trait = "0.1.77"
prost-types = "0.12.3"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
thiserror = "1.0.56"

[dev-dependencies]
sqlx-database-tester = { version = "0.4.2", features = ["runtime-tokio"] }
tokio = { version = "1.35.1", features = ["full"] }
