[package]
name = "reservation-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.79"
futures = { version = "0.3.30", default-features = false }
reservation = { version = "0.1.0", path = "../reservation" }
serde = { version = "1.0.196", features = ["derive"] }
serde_yaml = "0.9.31"
shellexpand = "3.1.0"
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.10.2", features = ["gzip", "tls"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.7.0", features = ["v4"] }

[dev-dependencies]
lazy_static = "1.4.0"
